force-app/main/default/objects/CIBE_FlowActions__mdt/CIBE_FlowActions__mdt.object-meta.xml
<CustomObject>
    <description>Metadata con los datos de las acciones y flows</description>
    <label>Flow Action</label>
    <pluralLabel>Flow Actions</pluralLabel>
</CustomObject>