force-app/main/default/objects/CIBE_FlowActions__mdt/fields/CIBE_FlowName__c.field-meta.xml
<CustomField>
    <fullName>CIBE_FlowName__c</fullName>
    <description>Metadata con el nombre del flow</description>
    <label>Flow API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>