force-app/main/default/objects/CIBE_FlowActions__mdt/fields/CIBE_Order__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Order__c</fullName>
    <description>Metatdata con el orden del flow</description>
    <label>Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>