force-app/main/default/objects/CIBE_FlowActions__mdt/fields/CIBE_Output__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Output__c</fullName>
    <label>Output Flow Variables</label>
    <length>255</length>
    <type>Text</type>
</CustomField>