force-app/main/default/objects/CIBE_FlowActions__mdt/fields/CIBE_Type__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Type__c</fullName>
    <description>Metadata con el valor del tipo de proceso</description>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>